[package]
name = "terminal-cam"
version = "0.1.1"
edition = "2021"
description = "ASCII-art webcam viewer for your terminal"
license = "MIT"
repository = "https://github.com/bluevisor/terminal-cam"
readme = "README.md"

[dependencies]
nokhwa = { version = "0.10", features = ["input-native"] }
crossterm = "0.28"
anyhow = "1"
parking_lot = "0.12"
ab_glyph = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
